# vaultwarden-operator

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.yaml
.github/workflows/: chart-lint.yml  ci.yml  release-chart.yml
charts/vaultwarden-operator/: Chart.yaml  README.md  values.yaml
charts/vaultwarden-operator/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  crd.yaml  deployment.yaml  networkpolicy.yaml  serviceaccount.yaml
config/crd/: vaultwardensecret.yaml
config/manager/: deployment.yaml  network_policy.yaml
config/rbac/: cluster_role.yaml  cluster_role_binding.yaml  service_account.yaml
pages/: index.html
scripts/: e2e-test.sh
scripts/e2e/: get-api-key.js  package-lock.json  package.json  register.js  tlsproxy.js
src/: controller.rs  crd.rs  crdgen.rs  health.rs  leader.rs  main.rs
src/vault/: auth.rs  crypto.rs  mod.rs  sync.rs
