[package]
name = "vaultwarden-operator"
version = "0.1.0"
edition = "2021"
description = "Kubernetes operator that syncs Vaultwarden secrets into native Kubernetes Secrets"
license = "MIT"

[[bin]]
name = "vaultwarden-operator"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"

[dependencies]
# Kubernetes
kube = { version = "0.97", features = ["runtime", "derive", "client", "rustls-tls", "unstable-runtime"] }
k8s-openapi = { version = "0.23", features = ["v1_31"] }
schemars = { version = "0.8", features = ["chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Crypto
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
argon2 = "0.5"
hkdf = "0.12"
rsa = { version = "0.9", features = ["sha2", "pkcs5"] }
pkcs8 = { version = "0.10", features = ["pkcs5", "alloc"] }
subtle = "2"
base64 = "0.22"

# Utilities
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
